--- a/frontend/src/css/ProjectList.css
+++ b/frontend/src/css/ProjectList.css
@@ -72,6 +72,11 @@ h1 {
   overflow-y: auto;
 }
 
+.project-row {
+  padding-left: 64px;
+  padding-right: 64px;
+}
+
 .project-title {
   font-size: 1.5rem;
   border-radius: 24px;
