--- a/frontend/src/css/Sidebar.css
+++ b/frontend/src/css/Sidebar.css
@@ -75,16 +75,38 @@
   display: flex;
   flex-direction: column; /* Stack checkboxes vertically */
   align-items: self-start;
+  width: 100%;
 }
 
 .checkbox {
   display: flex;
-  align-items: center;
+  flex-direction: row;
+  align-items: left;
   margin-bottom: 10px; /* Space between checkboxes */
+  width: 100%;
+  padding: 0 10px;
+  margin: 0;
 }
 
-.checkbox input[type="checkbox"] {
-  margin-right: 10px;
+.checkbox input {
+  margin: 10px;
+  width: 20px;
+  height: 20px;
+}
+
+.checkbox label {
+  flex-grow: 1;
+  display: flex;
+  align-items: center;
+  margin: 0;
+}
+
+.checkbox-group hr {
+  width: 100%;
+  border: none;
+  border-top: 2px solid black;
+  margin: 8px 0;
+  flex-grow: 0;
 }
 
 /* Button styles */
