--- a/frontend/src/css/StatisticsList.css
+++ b/frontend/src/css/StatisticsList.css
@@ -1,10 +1,10 @@
 .statistics-list-container {
   background-color: #f8f9fa;
   font-family: Arial, sans-serif;
-  padding-top: 56px; /* Adjust for Navbar height */
+  padding-top: 56px;
   display: flex;
   flex-direction: column;
-  min-height: 100vh; /* Ensure full height of the page */
+  min-height: 100vh;
 }
 
 .statistics-navbar {
@@ -16,9 +16,9 @@
 
 .statistics-search-row {
   position: absolute;
-  top: 70px; /* Position it below the navbar */
-  right: 20px; /* Align it to the right */
-  width: 250px; /* Set width of the search bar */
+  top: 70px;
+  right: 20px;
+  width: 250px;
   z-index: 5;
 }
 
@@ -70,7 +70,7 @@
   background-color: #ffffff;
   padding: 15px 0;
   box-shadow: 0 -2px 4px rgba(0, 0, 0, 0.1);
-  margin-top: auto; /* This ensures that the pagination is pushed to the bottom */
+  margin-top: auto;
 }
 
 .statistics-pagination {
@@ -103,11 +103,3 @@
   color: #6c757d;
   cursor: not-allowed;
 }
-
-/*button {*/
-/*  font-size: 0.9rem;*/
-/*}*/
-
-/*button:hover {*/
-/*  cursor: pointer;*/
-/*}*/
